--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=8080
+MONGODB_CNN=mongodb+srv://user_node_cafe:granada290378@miclustercafecursonode.bveep6o.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Est0EsMyPub1ck3y23@913
